--- a/client/partials/navbar.html
+++ b/client/partials/navbar.html
@@ -15,10 +15,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right" ng-controller="TranslateController">
             <li>
-              <a class="translateButtons" ng-click="changeLanguage('fr')">Fr</a>
+              <a class="translateButtons" ng-click="changeLanguage('fr_FR')">Fr</a>
             </li>
             <li>
-              <a class="translateButtons" ng-click="changeLanguage('en')">En</a>
+              <a class="translateButtons" ng-click="changeLanguage('en_EN')">En</a>
             </li>
             <li><a href="#/about">About</a></li>
       </ul>
