--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -19,10 +19,14 @@
         <div class="spaceBetweenParagraphs noFloat">&bull;</div>
         <div class="col-md-6"> 
           {{ 'COLUMN1' | translate }}
+          <a href="https://data.imf.org/">https://data.imf.org/</a>
+          {{ 'COLUMN1_LINK' | translate }}
+          <a href="http://comtrade.un.org/">http://comtrade.un.org/</a>
 
         </div>
         <div class="col-md-6"> 
           {{ 'COLUMN2' | translate }}
+          <a href="mailto:beatrice.dedinger@siencespo.fr">beatrice.dedinger@siencespo.fr</a>
         </div>
 
         </div>
