--- a/client/css/style.css
+++ b/client/css/style.css
@@ -70,7 +70,9 @@
     font-style: normal;
 }
 
-/* media query for small device */
+/* 
+ * Media query for small device 
+ */
 @media (min-height: 800px) {
 
 .sticky-container-fixed{
@@ -158,12 +160,14 @@ body {
   margin-bottom: 60px;
 }
 #footer {
-  position: absolute;
-  bottom: 0;
+/*  position: absolute;
+  bottom: 0;*/
+
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: white;
+  /*height: 60px;*/
+  background-color: #5e5e5e;
+  color: white
 }
 
 /* Custom page CSS
@@ -191,7 +195,7 @@ body > .container {
  */
 
 #homeImage {
-  height: 300px;
+  height: 600px;
   text-align: center;
   margin-bottom: 40px;
   position: relative;
@@ -201,22 +205,22 @@ body > .container {
 
 #backHomeImage {
   width: 100%;
-  height: 300px;
+  height: 600px;
   object-fit: cover;
   background-repeat: repeat;
 }
 
 #imgTitle {
    position: absolute; 
-   top: 100px; 
+   top: 200px; 
    left: 0; 
    width: 100%;
-   font-size: 40px;
+   font-size: 80px;
 }
 
 #imgSubtitle {
   position: absolute; 
-   top: 170px; 
+   top: 370px; 
    left: 0; 
    width: 100%;
    font-size: 30px;
@@ -384,6 +388,10 @@ li.storyline {
   color: white;
 }
 
+#workingPaper {
+  background-color: white;
+}
+
 /* 
  * Navbar 
  */
@@ -437,6 +445,7 @@ li.storyline {
   font-size: 0.7em;
   padding-bottom: 15px;
   padding-top: 15px;
+  cursor:pointer;
 }
 
 /* 
@@ -1086,4 +1095,6 @@ path.lineTrajectory {
   padding-right: 2px;
   border-left:  solid 1px white;
 }
+
+.invert {-webkit-filter: invert(100%); filter: invert(100%);}
 
