--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -154,8 +154,6 @@
     </div>
     <!-- <div id="footer"> -->
     <section id="footer">
-      
-    
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -225,13 +223,85 @@
           </div>
         </div>
       </section>
-       <div class="container">
+      <center><a href="#touModal" class="portfolio-link" data-toggle="modal">legal notice</a></center>
+       <!-- <div class="container">
        <div style="margin:auto;text-align:center; margin-top:20px;">
          
        <a href="" >Legal notice</a>
        </div>
        
-       </div>
+       </div> -->
+       <!-- Terms of use Modal -->
+    <div class="portfolio-modal modal fade" id="touModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Legal notice</h2>
+                            <p class="item-intro text-muted"></p>
+                            
+                            <p>
+                                The contents of this site were supplied by
+                            </p>
+                            <p>
+                                Sciences Po
+                                <br>
+                                27 rue Saint-Guillaume
+                                <br>
+                                75337 Paris Cedex 07
+                                <br>
+                                Tel. : 01 45 49 50 50
+                                <br>
+                                Fax. : 01 42 22 31 26
+                                <br>
+                                webmestre ( AT ) sciencespo ( DOT ) fr
+                                <br>
+                                Contact webmaster : paul.girard ( AT ) sciencespo ( DOT ) fr
+                            </p>
+                            <h3>Publisher</h3>
+                            <p>
+                                Frédéric Mion, President of Sciences Po
+                            </p>
+                            <h3>Hosting</h3>
+                            <p>
+                                This internet site is hosted by Fondation Nationale des Sciences Politiques (FNSP), Sciences Po - Direction des Systèmes d'Information
+                            </p>
+                            <p>
+                                APE Code: 803Z
+                                <br>
+                                27, rue saint Guillaume
+                                <br>
+                                75337 Paris cedex 07
+                            </p>
+                            <h3>Industrial and Intellectual Property</h3>
+                            <p>
+                                Except for explicitly licensed elements (Hyphe's software and website source codes), all information on this web site (text, photos, logos…) is protected by the copyrights held by Sciences Po or their partners.
+                                <br>
+                                Therefore, the information may not be reproduced, modified, republished, re-aired, translated, distributed or reused in any manner, without the written consent of Sciences Po.
+                                <br>
+                                The Sciences Po site’s title, concept and form, as well as its content, such as news, descriptions, illustrations and original images and their organisation, and any software compilation, source code and other elements contained on the Sciences Po site are the property of Sciences Po.
+                            </p>
+                            <h3>Hypertext Links</h3>
+                            <p>
+                                Our pages also contain links to other sites for which we are in no manner responsible, neither regarding their adhesion to public order or good conduct, on the one hand, nor regarding their personal data privacy policies and use, on the other.
+                                <br>
+                                By accessing an outside site, through a hypertext link, you accept that this access is carried out at your own risk. Therefore, Sciences Po will in no way be held responsible for any direct or indirect damages resulting from your access to an outside site through a hypertext link.
+                            </p>
+                            
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Close legal notice</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
   </div>
 <!--   </div> -->
 <!--   <div class="row noFloat" footer/>
